feat(symbols): update symbols
update symbols

Signed-off-by: mritd <mritd1234@gmail.com>

--- a/iMac-Home/luna_pinyin_simp.custom.yaml
+++ b/iMac-Home/luna_pinyin_simp.custom.yaml
@@ -19,12 +19,12 @@ patch:
   switches:
     - name: ascii_mode
       reset: 0
-      states: ["中文", "西文"]
+      states: ["中文", "英文"]
     - name: full_shape
       states: ["半角", "全角"]
     - name: zh_simp                      # (※1) 繁简转换
       reset: 1
-      states: ["漢字", "汉字"]
+      states: ["繁体", "简体"]
     - name: ascii_punct
       states: ["。，", "．，"]
     - options: ["utf8", "gbk", "gb2312"] # (※2)字符集选单
@@ -33,22 +33,22 @@ patch:
         - UTF-8
         - GBK
         - GB2312
-    - name: show_emoji
-      reset: 1
-      states: [ "🈚️️\uFE0E", "🈶️️\uFE0F" ]
+    # - name: emoji_suggestion
+    #   reset: 1
+    #   states: [ "🈚️️\uFE0E", "🈶️️\uFE0F" ]
 
 
   engine/filters:
-      - simplifier
-      - simplifier@emoji_conversion
-      - uniquifier
-      - charset_filter@gbk              # (※3) GBK 过滤
-      - single_char_filter
+    # - simplifier@emoji_suggestion
+    - simplifier
+    - uniquifier
+    - charset_filter@gbk              # (※3) GBK 过滤
+    - single_char_filter
 
-  emoji_conversion:
-    opencc_config: emoji.json
-    option_name: show_emoji
-    tags: abc
+  # emoji_suggestion:
+  #   opencc_config: emoji.json
+  #   option_name: emoji_suggestion
+  #   tips: all
 
   "speller/algebra/@before 0": xform/^([b-df-hj-np-tv-z])$/$1_/
 
@@ -71,11 +71,16 @@ patch:
   punctuator:
     import_preset: symbols
     symbols:
-      "/fs": [½, ‰, ¼, ⅓, ⅔, ¾, ⅒ ]
-      "/bq": [😂️, 😅️, ☺️, 😱️, 😭️, 😇️, 🙃️, 🤔️, 💊️, 💯️, 👍️, 🙈️, 💩️, 😈️ ]
-      "/dn": [⌘, ⌥, ⇧, ⌃, ⎋, ⇪, , ⌫, ⌦, ↩︎, ⏎, ↑, ↓, ←, →, ↖, ↘, ⇟, ⇞]
-      "/fh": [ ©, ®, ℗, ⓘ, ℠, ™, ℡, ␡, ♂, ♀, ☉, ☊, ☋, ☌, ☍, ☐, ☑︎, ☒, ☜, ☝, ☞, ☟, ✎, ✄, ♻, ⚐, ⚑, ⚠]
-      "/xh": [ ＊, ×, ✱, ★, ☆, ✩, ✧, ❋, ❊, ❉, ❈, ❅, ✿, ✲]
+      "/fs": [½,‰,¼,⅓,⅔,¾,⅒]
+      "/dq": [🌍,🌎,🌏,🌐,🌑,🌒,🌓,🌔,🌕,🌖,🌗,🌘,🌙,🌚,🌛,🌜,☀,🌝,🌞,⭐,🌟,🌠,☁,⛅,☔,⚡,❄,🔥,💧,🌊]
+      "/jt": [⬆,↗,➡,↘,⬇,↙,⬅,↖,↕,↔,↩,↪,⤴,⤵,🔃,🔄,🔙,🔚,🔛,🔜,🔝]
+      "/sg": [🍇,🍈,🍉,🍊,🍋,🍌,🍍,🍎,🍏,🍐,🍑,🍒,🍓,🍅,🍆,🌽,🍄,🌰,🍞,🍖,🍗,🍔,🍟,🍕,🍳,🍲,🍱,🍘,🍙,🍚,🍛,🍜,🍝,🍠,🍢,🍣,🍤,🍥,🍡,🍦,🍧,🍨,🍩,🍪,🎂,🍰,🍫,🍬,🍭,🍮,🍯,🍼,🍵,🍶,🍷,🍸,🍹,🍺,🍻,🍴]
+      "/dw": [🙈,🙉,🙊,🐵,🐒,🐶,🐕,🐩,🐺,🐱,😺,😸,😹,😻,😼,😽,🙀,😿,😾,🐈,🐯,🐅,🐆,🐴,🐎,🐮,🐂,🐃,🐄,🐷,🐖,🐗,🐽,🐏,🐑,🐐,🐪,🐫,🐘,🐭,🐁,🐀,🐹,🐰,🐇,🐻,🐨,🐼,🐾,🐔,🐓,🐣,🐤,🐥,🐦,🐧,🐸,🐊,🐢,🐍,🐲,🐉,🐳,🐋,🐬,🐟,🐠,🐡,🐙,🐚,🐌,🐛,🐜,🐝,🐞,🦋]
+      "/bq": [😀,😁,😂,😃,😄,😅,😆,😉,😊,😋,😎,😍,😘,😗,😙,😚,😇,😐,😑,😶,😏,😣,😥,😮,😯,😪,😫,😴,😌,😛,😜,😝,😒,😓,😔,😕,😲,😷,😖,😞,😟,😤,😢,😭,😦,😧,😨,😬,😰,😱,😳,😵,😡,😠]
+      "/ss": [💪,👈,👉,👆,👇,✋,👌,👍,👎,✊,👊,👋,👏,👐]
+      "/dn": [⌘,⌥,⇧,⌃,⎋,⇪,,⌫,⌦,↩︎,⏎,↑,↓,←,→,↖,↘,⇟,⇞]
+      "/fh": [©,®,℗,ⓘ,℠,™,℡,␡,♂,♀,☉,☊,☋,☌,☍,☑︎,☒,☜,☝,☞,☟,✎,✄,♻,⚐,⚑,⚠]
+      "/xh": [＊,×,✱,★,☆,✩,✧,❋,❊,❉,❈,❅,✿,✲]
     half_shape:
       "#": "#"
       "*": "*"
