--- a/iMac-Home/installation.yaml
+++ b/iMac-Home/installation.yaml
@@ -1,8 +1,6 @@
 distribution_code_name: Squirrel
 distribution_name: "鼠鬚管"
-distribution_version: 0.11.0
-install_time: "Fri Jan  4 10:23:29 2019"
-installation_id: "iMac-Home"
-rime_version: 1.4.0
-update_time: "Sat Mar 23 01:18:21 2019"
-sync_dir: /Users/mritd/github/rime
+distribution_version: 0.14.0
+install_time: "Thu Jan 30 21:33:51 2020"
+installation_id: "32dc9580-36b2-44be-bd75-b3fc8fce4807"
+rime_version: 1.5.3
